# models

./: Makefile  README.md  go.mod
.github/workflows/: ci-golang.yaml  ci-rust.yaml
golang/: go.mod  requests.pb.go
golang/models/: requests.pb.go
protobuf/: requests.proto
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
