[package]
name = "models"
version = "0.1.0"
authors = ["Amaury Ravanel <aravanel@pubstack.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
prost = "0.7.0"

[build-dependencies]
prost-build = "0.7.0"